--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./app.tsx" charset="utf-8"></script>
+    <script src="./client.tsx" charset="utf-8"></script>
   </body>
 </html>
